# Amaidesu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  B02_MIGRATION_SUMMARY.md  CLAUDE.md  EXECUTION_COMPLETE.md  IMPORT_PATH_UPDATES.md  PLUGIN_SYSTEM_DELETION_PLAN.md  PLUGIN_SYSTEM_DELETION_SUMMARY.md  PROVIDER_MIGRATION_COMPLETE.md  PROVIDER_MIGRATION_FINAL_REPORT.md  PROVIDER_MIGRATION_PLAN.md  PROVIDER_MIGRATION_PROGRESS.md  PROVIDER_STRUCTURE_UNIFIED.md  README.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  REFACTOR_DIRECTORY_STRUCTURE.md  TESTING_SUMMARY.md  amaidesu.py  config-template.toml  git_get_icon.py  main.py  mcp_tools_browser.py  mock_maicore.py  opencode.json  package-lock.json  pyproject.toml  refactor.md  requirements.txt  test.bat  test.sh  test_avatar_refactor.py  test_config_compatibility.py  test_console_input.py  test_input_providers.py  test_mock_providers.py  test_recipe_action_integration.py  test_report.md  test_summary.json  (+3 more)
config/: config-template.toml  config.py
dashboard/: .eslintrc.cjs  .gitignore  .prettierrc  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dev_src/: make_config_sync.py
docs/: CONFIG_FINAL_DESIGN.md  CONFIG_MIGRATION_GUIDE.md  CONFIG_UPGRADE_GUIDE.md  EVENT_DATA_CONTRACT_IMPROVEMENTS.md  LLM_MIGRATION_EVALUATION.md  MANUAL_TESTING_REQUIREMENTS.md  NEW_COLLABORATOR_ONBOARDING.md  PLUGIN_MIGRATION_GUIDE.md  PLUGIN_MIGRATION_STATUS.md  README.md  REFACTOR_OPTIMIZATION_ANALYSIS.md  REFACTOR_REMAINING.md  VTUBER_FLOW_E2E_GAP_ANALYSIS.md  config_migration_summary.md  development-guide.md  getting-started.md  git-history-squash-plan.md
openai_client/: llm_request.py  token_usage_manager.py
plugins_backup/: MIGRATION_COMPLETE.md  README.md
prompt_manager/: template.py
refactor/: 01_phase1_infrastructure.md  02_phase2_input.md  ARCHITECTURE_IMPROVEMENT_SUGGESTIONS.md  ARCHITECTURE_ISSUES_REPORT.md  CLEANUP_SUMMARY.md  CONSISTENCY_CHECK_REPORT.md  PLUGIN_SYSTEM_REMOVAL.md  PROVIDER_EXPLICIT_REGISTRATION.md  Plugin接口实现和迁移文档.md  README.md  REFACTOR_COMPLETE_SUMMARY.md  amaidesu_core_refactoring.md  architecture_consistency_analysis.md  avatar_refactor_completion_report.md  design.md  docs_index.md  git_history_fix_guide.md  implementation_plan.md  phase1_test_results.md  phase2_implementation_notes.md  phase2_testing_report.md  phase3_final_implementation_notes.md  phase3_implementation_notes.md  (+13 more)
(+1685 files in other folders)
